--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Firebase Configuration
 # Replace these with your actual Firebase project credentials
-REACT_APP_FIREBASE_API_KEY=your_api_key_here
-REACT_APP_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=your_project_id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-REACT_APP_FIREBASE_APP_ID=your_app_id
-REACT_APP_FIREBASE_MEASUREMENT_ID=your_measurement_id
+REACT_APP_FIREBASE_API_KEY=AIzaSyD2zOw3NzQbmc0RDtbvhuridjUNi_4AiAY
+REACT_APP_FIREBASE_AUTH_DOMAIN=ifc-farmers-club.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=ifc-farmers-club
+REACT_APP_FIREBASE_STORAGE_BUCKET=ifc-farmers-club.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=403216341753
+REACT_APP_FIREBASE_APP_ID=1:403216341753:web:d3af0019a238e03a85a028
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-KF5V7KWWZT
